# NetworkMonitor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NetworkMonitor.sln  NetworkMonitor.vcxproj  NetworkMonitor.vcxproj.filters  README.md  UpgradeLog.htm  config.json
.github/workflows/: ci.yml
docs/: FEATURE_SUGGESTIONS.md
include/NetworkMonitor/: Application.h  Common.h  ConfigManager.h  DashboardDialog.h  DialogThemeHelper.h  HistoryDialog.h  HistoryLogger.h  HotkeyManager.h  NetworkCalculator.h  NetworkMonitor.h  PingMonitor.h  SettingsDialog.h  TaskbarOverlay.h  ThemeHelper.h  TrayIcon.h  Utils.h
include/NetworkMonitor/Interfaces/: IConfigProvider.h  INetworkStatsProvider.h  IPingProvider.h
memory_db/: chroma.sqlite3
resources/: app.aps  app.manifest  app.rc  resource.h
src/: ConfigManager.cpp  HistoryLogger.cpp  NetworkCalculator.cpp  TaskbarOverlay.cpp  TrayIcon.cpp  Utils.cpp  main.cpp
src/core/: Application.cpp  ConfigManager.cpp  HistoryLogger.cpp  HotkeyManager.cpp  NetworkCalculator.cpp  NetworkMonitor.cpp  PingMonitor.cpp  Utils.cpp
src/entry/: main.cpp
src/ui/: DialogThemeHelper.cpp  TaskbarOverlay.cpp  ThemeHelper.cpp  TrayIcon.cpp
src/ui/dialogs/: DashboardDialog.cpp  HistoryDialog.cpp  SettingsDialog.cpp
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  config_manager_tests.cpp  history_logger_tests.cpp  main_tests.cpp  network_calculator_tests.cpp  network_monitor_tests.cpp  ui_tests.cpp  utils_tests.cpp
